// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadCrumbItems /> should render multiple items with slash in between them 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL gdJCyL"
  >
    <div
      className="sc-bcXGCL gdJCyL"
    >
      <a
        className="sc-bcXGCL cSKUd cap-link"
        href="/projects"
      >
        Project list
      </a>
      <span
        className="sc-bcXGCL kuWCYT cap-text"
      >
        /
      </span>
    </div>
    <div
      className="sc-bcXGCL gdJCyL"
    >
      <p
        className="sc-bcXGCL bOnpTF cap-text"
      >
        New Project
      </p>
    </div>
  </div>,
]
`;

exports[`<BreadCrumbItems /> should render one single item 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL gdJCyL"
  >
    <div
      className="sc-bcXGCL gdJCyL"
    >
      <p
        className="sc-bcXGCL bOnpTF cap-text"
      >
        Project list
      </p>
    </div>
  </div>,
]
`;
